# gamp-manager

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gamp-manager-model.mwb  gamp-manager.code-workspace  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto_merge.yml  pylint.yml  python-app.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
ansible/: ansible_test.yml  inventory.yml  node_exporter.yml
ansible/docker/: Dockerfile
ansible/inventories/: inventory.yml  test_ping.yml
ansible/project/: node_exporter.yml  prometheus.yml
ansible/roles/: node_exporter.yml  prometheus.yml
dist_electron/: index.js  package.json
exporter_version_updater/: config.sh  exporters.txt  version_checker.sh
exporter_version_updater/custom_metrics_files/: cbgi_cm_node_exporter.prom
exporter_version_updater/webs/: alertmanager_releases.html  apache_exporter_releases.html  blackbox_exporter_releases.html  grafana_releases.html  jmx_exporter_releases.html  mysqld_exporter_releases.html  node_exporter_releases.html  oracledb_exporter_releases.html  process-exporter_releases.html  prometheus_releases.html  snmp_exporter_releases.html  windows_exporter_releases.html
memoria/: tfg_etsiinf_ArturoVidalPeña.tex
memoria/include/: Portada.tex  Preambulo.tex
memoria/presentacion/: presentacion.tex
memoria/secciones/: 00_Resumen.tex  01_Introduccion.tex  02_Desarrollo.tex  03_Resultados.tex  (+4 more)
secrets/: .env.secret
src/: __init__.py  background.js
(+57 files in other folders)
