[tool.poetry]
name = "gamp_manager"
version = "0.1.0"
description = "App to maintain the Grafana, AlertManager and Prometheus (GAMP) configurator and manager app, as my End-of-Degree Project (TFG)."
authors = ["Arturo Vidal Peña <arturo.vidal.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^0.27.0"
mysqlclient = "^2.1.0"
SQLAlchemy = "^2.0.36"
SQLAlchemy-Utils = "^0.38.2"
requests = "^2.32.3"
pyvmomi = "^7.0.3"
pywin32 = "^308"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
behave = "^1.2.6"
pylint = "^2.13.9"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
